bug fixes (make it so that hamburger menu can scroll to avoid overlay issue)
issue!: scrolling gets messed up once hamburger menu is clicked?

--- a/src/Hamburger.css
+++ b/src/Hamburger.css
@@ -24,7 +24,6 @@
     top: 0;
     left: 0;
     position: absolute;
-    height: 100vh;
     width: 100%;
 
 }
